# grvy

./: .gitignore  .travis.yml  AUTHORS  CHANGES  LICENSE  Makefile.am  Makefile.in  README.md  _acknowledgments.html  _c_x_xinput_example.html  _c_x_xtimer_example.html  _cinput_example.html  _clogging_example.html  _ctimer_example.html  _f90input_example.html  _f90math_example.html  _f90timer_example.html  _license_l_g_p_l.html  annotated.html  api_c.html  api_f.html  bootstrap  classes.html  configure  configure.ac  customdoxygen.css  dir_4e8d938e9ddb5a617c200d5739d1f41a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d94687a39c1271d9f804b2dbb9a15353.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  group___c_x_xapi.html  group___c_x_xinput.html  group___c_x_xocore.html  group___c_x_xtimer.html  group___capi.html  (+29 more)
.github/workflows/: build.yaml  docs.yaml  tarball.yaml
doxygen/: Makefile.am  aminclude.am  docs.layout  grvy.dox  grvy.page  grvy.txt  hpct.dox  hpct.page  hpct.page.in
doxygen/txt_common/: about_vpath.page  acknowledgment.txt  lgpl.txt
examples/: Makefile.am  Makefile.ices  Makefile.in  check_dir.c  check_dir.f90  cpp-example.cpp  cpp-input.cpp  cpp-messages.cpp  cpp-ocore.cpp  cpp-timer.cpp  hdf5_access.cpp  input.c  inputf.f90  koomie2.h5  math-isinf.c  math-isnan.c  math.f90  messages.c  mpi_ocore.input  ocore.c  ocore_f.f90  ocore_performance.cpp  pecos-input.txt  timer.c  timer_sum.c  timer_sum.f90  timer_sumf.f90  timerf.f90
lib/: Makefile.am  Makefile.in
m4/: acx_mpi.m4  boost.m4  config_environment.m4  config_summary.m4  coverage.m4  gnulib-cache.m4  gnulib-comp.m4  gsl.m4  hdf5.m4
src/: GetPot  Makefile.am  Makefile.ices  Makefile.in  example.c  example.cpp  example2.c  example3.f90  fortran_string_order.h  gadd.cpp  gdump.cpp  grvy.f90  grvy.h  grvy.h.in  grvy_classes.cpp  grvy_classes.h  grvy_env.cpp  grvy_env.h  grvy_hdf5.cpp  grvy_hpct.f90  grvy_hpct_compat.cpp  grvy_input.cpp  grvy_input_interface.cpp  grvy_int.h  grvy_log.cpp  grvy_math.cpp  grvy_mpi.h  grvy_ptable.h  grvy_ramdisk.cpp  grvy_ramdisk_interface.cpp  grvy_timer.cpp  grvy_timer_interface.cpp  grvy_utils.cpp  grvy_version.cpp  hostinfo.cpp  hpct.f90  hpct.h  hpct_classes.cpp  hpct_classes.h  hpct_input.cpp  (+9 more)
src/common/getpot/: getpot.h
src/common/lic_utils/: update_license.pl
test/: C++_hdf_hist_timing.cpp  C++_input-register.cpp  C++_input.cpp  C++_input_dump.cpp  C++_input_stream.cpp  C++_ocore.cpp  C++_timer_expanded_width.cpp  C++_timer_no_init.cpp  C++_timer_std_width.cpp  CXX_ocore.cpp  CXX_ocore.sh  CXX_timer_expanded_width.sh  CXX_timer_std_width.sh  C_check_copy_dir.c  C_check_file_path.c  C_examplefile.c  C_hdf_hist_timing.c  C_input-dos-newlines.c  C_input-missing-var.c  C_input-nofile.c  C_input-reg-missing-var.c  C_input-register.c  C_input.c  C_input_dump.c  C_log.c  C_log_printf.c  C_math-isinf.c  C_math-isnan.c  C_ocore.c  C_ocore.sh  C_scratch_dir.c  C_temp_dir.c  C_timer.c  C_timer_baseline.c  C_timer_errors.c  C_timer_expanded_width.c  C_timer_expanded_width.sh  C_timer_no_finalize.c  C_timer_no_finalize.sh  C_timer_no_init.c  (+75 more)
test/hpct_api/: C_check_file_path.c  C_input-missing-var.c  C_input-nofile.c  C_input-register.c  C_input.c  C_math-isinf.c  C_math-isnan.c  C_scratch_dir.c  C_timer.c  C_unique_dir.c  F_math.f90  F_scratch_dir.f90  F_unique_dir.f90  Makefile.am  init.sh
test/ref_files/: gadd.help  gdump.help  hdf_timer.txt  log_priorities.txt  log_priorities_printf.txt  solution.C.txt  solution.txt  summarize.expanded.txt  summarize.std.txt
test/ref_files/adir/: afile  bfile
test/ref_files/adir/bdir/: cfile
test/ref_files/perf_test/mymachine/: example1  example1.pruned
test/ref_files/perf_test/yourmachine/: example2  example2.pruned
test/travis/: Dockerfile.gcc7  test.sh
